--- a/giulia cicero website/giulia-cicero.css
+++ b/giulia cicero website/giulia-cicero.css
@@ -7,24 +7,26 @@
     background-color: #201028;
     
   }
+   /* we create a photo in indesign and imported as homepage*/
+  .homepagephoto {
+    width: 100vmax;
+    height: 100vh;
+  } 
   
-  
-  
-  
+   /* we created the logo in png format */
   .logo {
-    top: -78px;
-    left: -40px;
-    position: absolute;
+    top: -85px;
+    left: -60px;
+    position:absolute;
     z-index: 2;
     cursor: pointer;
     background: transparent;
-   
-    }
+    
+  }
   
-  
-  
+   /* background around the home,artist etc (trans used for when they are gong to appear in the screen)*/
   .nav-wrapper{
-    position: absolute;
+    position: fixed;
     top: 0;
     opacity: 85%;
     right: -100%;
@@ -33,14 +35,17 @@
     background:#876684;
     transition: all 0.6s ease-in-out;
   }
+  /* menu bar appearing once clicking on the lines menu*/
   #active:checked ~ .nav-wrapper{
     right:0;
   }
+  /* the 3 lines of the menu bar including an inamtion which translate the bars to a x */
+  
   .menu-btn{
     position: absolute;
     z-index: 2;
     right: 20px;
-    top: 30px;
+    top: 17px;
     height: 50px;
     width: 50px;
     text-align: center;
@@ -69,6 +74,7 @@
     transform: translateY(8px);
   }
   
+  /* adjusting animation and transl*/
   
   .close {
       z-index: 1;
@@ -89,6 +95,7 @@
       transform: rotate(-45deg);
     border-color: #fff;
   }
+  
   .nav-wrapper ul{
     position: absolute;
     top: 60%;
@@ -151,41 +158,70 @@
     transform: translateX(-100px);
   }
   
-  .sponsor-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
-    gap: 4rem;
-    margin: 0 auto;
-    max-width: 700px;
-  }
-  
-  li p {
-    margin-top: 1rem;
-    font-family: system-ui;
-    text-align: center;
-  }
-  
-  .sponsor img {
-    aspect-ratio: 1 / 1;
-    width: 100%;
-    object-fit: contain;
-  }
+/* CSS inspo from https://www.w3schools.com/howto/howto_js_image_grid.asp  */
+*{
+	margin: 0px ;
+	padding: 0;
+	font-family: 'Lato', sans-serif;
+	font-family: 'Oswald', sans-serif;
+	background-color:#201028;
+}
+	.gallery {
+	display: flex;
+	padding-top: 50px;
+	transition: .3s;
+    margin-right: 10px;
+}
 
-  .row {
-    display: flex;
-    flex-wrap: wrap;
-    padding: 0 4px;
-  }
-  
-  /* Create two equal columns that sits next to each other */
-  .column {
-    flex: 50%;
-    padding: 0 4px;
-  }
-  
-  .column img {
-    margin-top: 8px;
-    vertical-align: middle;
-  }
-  
+
+.gallery__thumb:hover {
+	filter: grayscale(1);
+	}
+	
+.gallery__column {
+	display: flex;
+	flex-direction: column;
+	width: 50%;
+	}
+	
+.gallery__link {
+	margin: 1px;
+	overflow: hidden;
+    }			
+    .gallery__caption {
+	  color: rgb(252, 249, 252);
+	  opacity: 30%;
+	  margin-left: 10px;
+	  position: relative;
+			}
+}
+	
+	.gallery__thumb {
+		position:absolute;
+	}
+
+	.gallery__image {
+
+		margin: 10px;
+		margin-top: 25px;
+		display:block;
+		width: 100%;
+		opacity: 1;
+		backface-visibility: hidden;
+		transition: .3s;
+    }
+		.gallery__image:hover {
+			transform: scale(1.1);
+		}
+	}
+	
+	.gallery__caption {
+		position: relative;
+		opacity: 20%;
+	}
+    
+    
+      
+
+
   
